<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/button_margin"
        android:orientation="vertical"
        tools:context="com.sherlockshi.rxjavapractise.MainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_1_create"
            android:onClick="jumpToCategory1Operator1CreateActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_2_defer"
            android:onClick="jumpToCategory1Operator2DeferActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_31_empty"
            android:onClick="jumpToCategory1Operator31EmptyActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_32_never"
            android:onClick="jumpToCategory1Operator32NeverActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_33_throw"
            android:onClick="jumpToCategory1Operator33ThrowActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_4_from"
            android:onClick="jumpToCategory1Operator4FromActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_5_interval"
            android:onClick="jumpToCategory1Operator5IntervalActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_6_just"
            android:onClick="jumpToCategory1Operator6JustActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_7_range"
            android:onClick="jumpToCategory1Operator7RangeActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_8_repeat"
            android:onClick="jumpToCategory1Operator8RepeatActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_9_start"
            android:onClick="jumpToCategory1Operator9StartActivity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/activity_category1_creating_observables_10_timer"
            android:onClick="jumpToCategory1Operator10TimerActivity"/>
    </LinearLayout>
</ScrollView>
