<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/button_margin"
        tools:context="com.sherlockshi.rxjavapractise.MainActivity">

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator1FilterActivity"
            android:text="@string/activity_category3_filtering_observables_1_filter" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator2TakeLastActivity"
            android:text="@string/activity_category3_filtering_observables_2_take_last" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator3LastActivity"
            android:text="@string/activity_category3_filtering_observables_3_last" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator4SkipActivity"
            android:text="@string/activity_category3_filtering_observables_4_skip" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator5SkipLastActivity"
            android:text="@string/activity_category3_filtering_observables_5_skip_last" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator6TakeActivity"
            android:text="@string/activity_category3_filtering_observables_6_take" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator7FirstActivity"
            android:text="@string/activity_category3_filtering_observables_7_first" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator8ElementAtActivity"
            android:text="@string/activity_category3_filtering_observables_8_element_at" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator9SampleActivity"
            android:text="@string/activity_category3_filtering_observables_9_sample" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator10DebounceActivity"
            android:text="@string/activity_category3_filtering_observables_10_debounce" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator11DistinctActivity"
            android:text="@string/activity_category3_filtering_observables_11_distinct" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory3Operator12IgnoreElementsActivity"
            android:text="@string/activity_category3_filtering_observables_12_ignore_elements" />
    </LinearLayout>
</ScrollView>
