<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/button_margin"
        tools:context="com.sherlockshi.rxjavapractise.MainActivity">

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator1GetIteratorActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_1_get_iterator" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator2ToFutureActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_2_to_future" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator3ToIterableActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_3_to_iterable" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator4ToListActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_4_to_list" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator5ToMapActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_5_to_map" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator6ToMultiMapActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_6_to_multi_map" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator7ToSortedListActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_7_to_sorted_list" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jumpToCategory11Operator8NestActivity"
            android:text="@string/activity_category11_operators_to_convert_observables_8_nest" />
    </LinearLayout>
</ScrollView>
